--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<script type='text/javascript'>
-function click()
-{
-  alert("if javascript works")
-}
-</script>
+<script type='text/javascript' src='mysrc.js'></script>
 </head>
 <body>
 <button onclick="click()">Java Script test</button>
