--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <script type="text/javascript" src="mysrc.js"></script>
 </head>
 <body>
+<input type="text" id="txt">  
 <button onclick="click()">Java Script test</button>
 </body>
 </html>
