--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<script type="text/javascript" src="mysrc.js"></script>
+<script type="text/javascript" src="/mysrc.js"></script>
 </head>
 <body>
 <input type="text" id="txt">  
