--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript" src="/mysrc.js"></script>
+<meta charset="UTF-8">
+<script type="text/javascript" src="mysrc.js"></script>
 </head>
 <body>
 <input type="text" id="txt">  
