--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<script type="text/javascript" src="/mysrc.js"></script>
+<script type="text/javascript" src="./mysrc.js"></script>
 </head>
 <body>
 <input type="text" id="txt">  
