--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <input type="text" id="txt">  
-<button onclick="click()">Java Script test</button>
+<button onclick="xx()">Java Script test</button>
 </body>
 </html>
