--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script type="text/javascript">
 function xx()
 {
-  document.getElementById("txt").value = "Hello Script"
+  alert("Hello");
 }  
 </script> 
 </head>
