--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
-<script type="text/javascript">
-function xx()
-{
-  alert("Hello");
-}  
+<script type="text/javascript" src='mysrc.js'>
 </script> 
 </head>
 <body>
 <input type="text" id="txt">  
-<button onclick="xx()">Java Script test</button>
+<button onclick="test()">Java Script test</button>
 </body>
 </html>
