--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<script src='mysrc.js'></script> 
 </head>
 <body>
-<input type="text" id="txt">  
-<button onclick="test()">Java Script test</button>
+<h1>Gunjan Mohapatra</h1>
+<h5>Work in progress</h5>  
+<a href="Calendar.html">Calendar</a>
 </body>
 </html>
