--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 <h1>Gunjan Mohapatra</h1>
-<h5>Work in progress</h5>  
+<h5>Toronto, Ontario, Canada</h5>  
+<h5>Will be putting some more of my work here soon...</h5>
 <a href="Calendar.html">Calendar</a>
 </body>
 </html>
