--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1>Gunjan Mohapatra</h1>
 <h5>Toronto, Ontario, Canada</h5>  
 <h5>Will be putting some more of my work here soon...</h5>
-<a href="HTMLAssistant.html">HTML Assistant</a> 
+<a href="HtmlAssistant.html">HTML Assistant</a> <br>
 <a href="Calendar.html">Annual Calendar</a>
 </body>
 </html>
