--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1>Gunjan Mohapatra</h1>
 <h5>Toronto, Ontario, Canada</h5>  
 <h5>Will be putting some more of my work here soon...</h5>
-<h3><a href="HtmlAssistant.html">HTML Assistant</a><h3> <h4>This is work in progress, but do try it out</h4><br><br><br><br>
+<h3><a href="HTMLAssistant.html">HTML Assistant</a><h3> <h4>This is work in progress, but do try it out</h4><br><br><br><br>
 <h3><a href="Calendar.html">Annual Calendar</a></h3>
 </body>
 </html>
