--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title></title>
 <meta charset="UTF-8">
+<style>
+div
+{
+	box-shadow:5px 5px 5px silver;
+	border:1px solid silver;
+	text-align:center;
+}
+</style>
 </head>
 <body>
-<h1>Gunjan Mohapatra</h1>
-<h5>Toronto, Ontario, Canada</h5>  
-<h5>Will be putting some more of my work here soon...</h5>
-<h3><a href="HTMLAssistant.html">HTML Assistant</a><h3> <h4>This is work in progress, but do try it out</h4><br><br><br><br>
-<h3><a href="Calendar.html">Annual Calendar</a></h3>
+	<div>
+		<h1>
+			Gunjan Mohapatra
+		</h1>
+		<h5>
+			Toronto, Ontario, Canada
+		</h5>
+
+	</div>
+	<div>
+		<p><h3><a href="HTMLAssistant.html" target="_blank">HTML Assistant</h3></a><h5>This is work in progress but please do try it out</p>	
+	</div>	
+	<div>
+		<p><a href="Calendar.html" target="_blank"><h3>Annual Calendar</h3></a></p>	
+	</div>	
 </body>
 </html>
