--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ body
 </style>
 </head>
 <body>
+<center>	
 	<div>
 		<h1>
 			Gunjan Mohapatra
@@ -32,6 +33,7 @@ body
 	</div>	
 	<div>
 		<p><a href="Calendar.html" target="_blank"><h3>Annual Calendar</h3></a></p>	
-	</div>	
+	</div>
+</center>		
 </body>
 </html>
