--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@ body
 <center>	
 	<div>
 		<h1>
-			Gunjan Mohapatra
+			Mr. Gunjan Mohapatra
 		</h1>
 		<h5>
-			Toronto, Ontario, Canada
+			Toronto, Ontario, Canada<br>
+			
+			I will be putting some more of my work here, soon.
 		</h5>
 
 	</div>
