--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <title></title>
 <meta charset="UTF-8">
 <style>
-div
+.sdwDiv
 {
 	box-shadow:5px 5px 5px silver;
-	border:1px solid silver;
+	border:0px solid silver;
 	text-align:center;
 	width:60%
 }
@@ -19,7 +19,7 @@ body
 </head>
 <body>
 <center>	
-	<div>
+	<div class="sdwDiv">
 		<h1>
 			Mr. Gunjan Mohapatra
 		</h1>
@@ -28,10 +28,10 @@ body
 		</h5>
 
 	</div>
-	<div>
+	<div class="sdwDiv">
 		<p><h3><a href="HTMLAssistant.html" target="_blank">HTML Assistant</h3></a><h5>This is work in progress but please do try it out</p>	
 	</div>	
-	<div>
+	<div class="sdwDiv">
 		<p><a href="Calendar.html" target="_blank"><h3>Annual Calendar</h3></a></p>	
 	</div>
 		<h5>
