--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body
 
 	</div>
 	<div class="sdwDiv">
-		<p><h3><a href="HTMLAssistant.html" target="_blank">HTML Assistant</h3></a><h5>This is work in progress but please do try it out</p>	
+		<p><h3><a href="HTMLAssistant.html" target="_blank">HTML Assistant</h3></a><h5>Very handy for quick html coding</h5></p>	
 	</div>	
 	<div class="sdwDiv">
 		<p><a href="Calendar.html" target="_blank"><h3>Annual Calendar</h3></a></p>	
