--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@ body
 		<p><h3><a href="HTMLAssistant.html" target="_blank">HTML Assistant</h3></a><h5>Very handy for quick html code</h5></p>	
 	</div>	
 	<div class="sdwDiv">
+		<p><a href="TimeSheetInvoice.html" target="_blank"><h3>A Timesheet and Invoice application</h3></a></p>	
+	</div>
+	<div class="sdwDiv">
 		<p><a href="Calendar.html" target="_blank"><h3>Annual Calendar</h3></a></p>	
 	</div>
 		<h5>
