--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@ body
 
 	</div>
 	<div class="sdwDiv">
+		<p><h3><a href="/gmgrid" target="_blank">JSON Grid Component Developed in Angular v.7</h3></a><h5>For vewing JSON Data it grid and do some filtering</h5></p>	
+	</div>	
+	<div class="sdwDiv">
 		<p><h3><a href="HTMLAssistant.html" target="_blank">HTML Assistant</h3></a><h5>Very handy for quick html code</h5></p>	
 	</div>	
 	<div class="sdwDiv">
