--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body
 
 	</div>
 	<div class="sdwDiv">
-		<p><h3><a href="/gmgrid" target="_blank">JSON Grid Component Developed in Angular v.7</h3></a><h5>For vewing JSON Data it grid and do some filtering</h5></p>	
+		<p><h3><a href="/gmgrid" target="_blank">JSON Grid Component Developed in Angular v.7</h3></a><h5>For vewing JSON Data in grid and do some filtering</h5></p>	
 	</div>	
 	<div class="sdwDiv">
 		<p><h3><a href="HTMLAssistant.html" target="_blank">HTML Assistant</h3></a><h5>Very handy for quick html code</h5></p>	
@@ -40,10 +40,12 @@ body
 	<div class="sdwDiv">
 		<p><a href="Calendar.html" target="_blank"><h3>Annual Calendar</h3></a></p>	
 	</div>
-	
-		<h5>
+	<h5>
 		I will be putting some more of my work here, soon.
-		</h5>
+	</h5>
+	
+	<h5>&copy; 2019 Mr. Gunjan Mohapatra</h5>
+	
 </center>		
 </body>
 </html>
