--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ h5
 
 	</div>
 	<div class="sdwDiv">
-		<p><h3><a href="/gmgrid" target="_blank">JSON Grid Component Developed in Angular v.7</h3></a><h5>For vewing JSON Data in grid and do some filtering</h5></p>	
+		<p><h3><a href="/gmgrid" target="_blank">JSON Grid Component Developed in Angular v.7</h3></a><h5>To view JSON Data in grid. It has some filter options</h5></p>	
 	</div>	
 	<div class="sdwDiv">
 		<p><h3><a href="HTMLAssistant.html" target="_blank">HTML Assistant</h3></a><h5>Very handy for quick html code</h5></p>	
