--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@ h5
 	</div>
 	
 	<div class="sdwDiv">
+		<p><h3><a href="/calculator" target="_blank">A different type of calculator developed in Angular v.9</h3></a></p>	
+	</div>
+	
+	<div class="sdwDiv">
 		<p><h3><a href="/gmgrid" target="_blank">JSON Grid Component Developed in Angular v.7</h3></a><h5>To view JSON Data in grid. It has some filter options</h5></p>	
 	</div>	
 	<div class="sdwDiv">
