--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 	box-shadow:5px 5px 5px silver;
 	border:1px solid silver;
 	text-align:center;
-	width:60%
+	width:100%;
+	font-size:150%;
 }
 body
 {
-	margin:100px;
+	margin:50px;
 }
 h5
 {
