--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ h5
 	</div>
 	
 	<div class="sdwDiv">
+		<p><h1><a href="/DataToCodeAssistant" target="_blank">Data to Code Assistant developed in Angular v.9</h1></a></p>	
+	</div>
+	<div class="sdwDiv">
 		<p><h1><a href="/calculator" target="_blank">A different type of calculator developed in Angular v.9</h1></a></p>	
 	</div>
 	
