--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 body
 {
 	margin:100px;
+	font-size:2vw;
 }
 h5
 {
 	font-family:arial;
+	font-size:2vw;
 }
 </style>
 </head>
@@ -34,12 +36,14 @@ h5
 	</div>
 	
 	<div class="sdwDiv">
-		<p><h1><a href="/DataToCodeAssistant" target="_blank">Data to Code Assistant developed in Angular v.9</h1></a></p>	
+		<p><h1><a href="/TimeFinder" target="_blank">What time will it be? developed in Angular v.9</h1></a></p>	
 	</div>
 	<div class="sdwDiv">
 		<p><h1><a href="/calculator" target="_blank">A different type of calculator developed in Angular v.9</h1></a></p>	
 	</div>
-	
+	<div class="sdwDiv">
+		<p><h1><a href="/DataToCodeAssistant" target="_blank">Data to Code Assistant developed in Angular v.9</h1></a></p>	
+	</div>
 	<div class="sdwDiv">
 		<p><h1><a href="/gmgrid" target="_blank">JSON Grid Component Developed in Angular v.7</h1></a><h5>To view JSON Data in grid. It has some filter options</h5></p>	
 	</div>	
