--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@ body
 	margin:20px;
 	font-size:1vw;
 }
-h1,h5
+h1
 {
 	font-family:arial;
 	font-size:2vw;
+}
+h5
+{
+	font-family:arial;
+	font-size:1vw;
 }
 </style>
 </head>
