--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@ h1
 {
 	font-family:arial;
 	font-size:2vw;
+	margin:2px;
 }
 h5
 {
 	font-family:arial;
 	font-size:1vw;
+	margin:2px;
 }
 </style>
 </head>
