--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 body
 {
 	margin:20px;
-	font-size:1vw;
+	font-size:16px;
 }
 h1
 {
 	font-family:arial;
-	font-size:2vw;
+	font-size:120%;
 	margin:2px;
 }
 h5
 {
 	font-family:arial;
-	font-size:1vw;
+	font-size:100%;
 	margin:2px;
 }
 </style>
