--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
 <title></title>
 <meta charset="UTF-8">
 <style>
+html{font-size:110%;}
+@media(min-width:60em){html{font-size: 90%}}	
 .sdwDiv
 {
 	box-shadow:5px 5px 5px silver;
 	border:1px solid silver;
 	text-align:center;
 	width:95%;
-	font-size:25px;
+	
 }
 body
 {
 	margin:20px;
-	font-size:16px;
+	
 }
-h1,p
+h1
 {
 	font-family:arial;
-	font-size:120%;
 	margin:2px;
 }
 h5
 {
 	font-family:arial;
-	font-size:100%;
 	margin:2px;
 }
 </style>
