--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
 <title></title>
 <meta charset="UTF-8">
 <style>
-html{font-size:25px;}
-@media(min-width:60em){html{font-size: 150%}}	
+html
+{
+	font-size:25px;
+}
+@media(min-width:60em)
+{
+	html
+	{
+		font-size: 150%
+	}
+}	
 .sdwDiv
 {
 	box-shadow:5px 5px 5px silver;
