--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
 <title></title>
 <meta charset="UTF-8">
 <style>
-html
-{
-	font-size:25px;
-}
-@media(min-width:60em)
+@media(max-width:600px)
 {
 	html
 	{
-		font-size: 150%
+		font-size: 80px
 	}
 }	
+@media(m-n-width:601px)
+{
+	html
+	{
+		font-size: 16px
+	}
+}
 .sdwDiv
 {
 	box-shadow:5px 5px 5px silver;
