--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
 <head>
 <title></title>
 <meta charset="UTF-8">
+html
+{
+	font-size: 16px;	
+}
 <style>
+
 @media(max-width:600px)
 {
 	html
 	{
-		font-size: 80px
+		font-size: 150%;
 	}
 }	
-@media(m-n-width:601px)
+@media(min-width:601px)
 {
 	html
 	{
-		font-size: 16px
+	   	font-size:50%;	
 	}
 }
 .sdwDiv
