--- a/index.html
+++ b/index.html
@@ -2,22 +2,9 @@
 <html>
 <head>
 <title></title>
-<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
 <style>
-@media(max-width:600px)
-{
-	html
-	{
-		font-size: 80px;
-	}
-}	
-@media(min-width:601px)
-{
-	html
-	{
-	   	font-size:5px;	
-	}
-}
+
 .sdwDiv
 {
 	box-shadow:5px 5px 5px silver;
