--- a/index.html
+++ b/index.html
@@ -43,30 +43,26 @@ h5
 	</div>
 	
 	<div class="sdwDiv">
-		<p><h1><a href="/TimeFinder" target="_blank">What time will it be? developed in Angular v.9</h1></a></p>	
+		<h1><a href="/TimeFinder" target="_blank">What time will it be? developed in Angular v.9</h1></a>	
 	</div>
 	<div class="sdwDiv">
-		<p><h1><a href="/calculator" target="_blank">A different type of calculator developed in Angular v.9</h1></a></p>	
+		<h1><a href="/calculator" target="_blank">A different type of calculator developed in Angular v.9</h1></a>	
 	</div>
 	<div class="sdwDiv">
-		<p><h1><a href="/DataToCodeAssistant" target="_blank">Data to Code Assistant developed in Angular v.9</h1></a></p>	
+		<h1><a href="/DataToCodeAssistant" target="_blank">Data to Code Assistant developed in Angular v.9</h1></a>	
 	</div>
 	<div class="sdwDiv">
-		<p><h1><a href="/gmgrid" target="_blank">JSON Grid Component Developed in Angular v.7</h1></a><h5>To view JSON Data in grid. It has some filter options</h5></p>	
+		<h1><a href="/gmgrid" target="_blank">JSON Grid Component Developed in Angular v.7</h1></a><h5>To view JSON Data in grid. It has some filter options</h5>	
 	</div>	
 	<div class="sdwDiv">
-		<p><h1><a href="HTMLAssistant.html" target="_blank">HTML Assistant</h1></a><h5>Very handy for quick html code</h5></p>	
+		<h1><a href="HTMLAssistant.html" target="_blank">HTML Assistant</h1></a><h5>Very handy for quick html code</h5>	
 	</div>	
 	<div class="sdwDiv">
-		<p><a href="TimeSheetInvoice.html" target="_blank"><h1>A Timesheet and Invoice application</h1></a></p>	
+		<a href="TimeSheetInvoice.html" target="_blank"><h1>A Timesheet and Invoice application</h1></a>	
 	</div>
 	<div class="sdwDiv">
-		<p><a href="Calendar.html" target="_blank"><h1>Annual Calendar</h1></a></p>	
+		<a href="Calendar.html" target="_blank"><h1>Annual Calendar</h1></a>	
 	</div>
-	<h5>
-		I will be putting some more of my work here, soon.
-	</h5>
-	
 	<h5>&copy; 2019 Mr. Gunjan Mohapatra</h5>
 	<h5>ContactGunjanMohapatra@gmail.com</h5>
 	
