--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 body
 {
 	margin:20px;
-	
+	font-size:80px;
 }
 h1
 {
@@ -43,16 +43,19 @@ h5
 	</div>
 	
 	<div class="sdwDiv">
-		<h1><a href="/TimeFinder" target="_blank">What time will it be? developed in Angular v.9</h1></a>	
+		<h1><a href="/TimeFinder" target="_blank">What time will it be?</h1></a>
+		<h5>Angular v.9</h5>
 	</div>
 	<div class="sdwDiv">
-		<h1><a href="/calculator" target="_blank">A different type of calculator developed in Angular v.9</h1></a>	
+		<h1><a href="/calculator" target="_blank">A different type of calculator.</h1></a>	
+		<h5>Angular v.9</h5>
 	</div>
 	<div class="sdwDiv">
-		<h1><a href="/DataToCodeAssistant" target="_blank">Data to Code Assistant developed in Angular v.9</h1></a>	
+		<h1><a href="/DataToCodeAssistant" target="_blank">Data to Code Assistant.</h1></a>	
+		<h5>Angular v.9</h5>
 	</div>
 	<div class="sdwDiv">
-		<h1><a href="/gmgrid" target="_blank">JSON Grid Component Developed in Angular v.7</h1></a><h5>To view JSON Data in grid. It has some filter options</h5>	
+		<h1><a href="/gmgrid" target="_blank">JSON Grid Component.</h1></a><h5>To view JSON Data in grid. It has some filter options. Angular v.7</h5>	
 	</div>	
 	<div class="sdwDiv">
 		<h1><a href="HTMLAssistant.html" target="_blank">HTML Assistant</h1></a><h5>Very handy for quick html code</h5>	
