--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
 <title></title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
 <style>
-
+@media(max-width:60em)
+{
+	body
+	{
+		font-size: 80px;
+	}
+}	
+@media(min-width:61em)
+{
+	body
+	{
+	   	font-size:16px;	
+	}
+}
 .sdwDiv
 {
 	box-shadow:5px 5px 5px silver;
@@ -16,7 +29,7 @@
 body
 {
 	margin:20px;
-	font-size:80px;
+	
 }
 h1
 {
