--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 	box-shadow:5px 5px 5px silver;
 	border:1px solid silver;
 	text-align:center;
-	width:40%;
-	float:left;
+	width:95;
+	margin:5px;
 }
 body
 {
