--- a/index.html
+++ b/index.html
@@ -44,17 +44,7 @@ h5
 </style>
 </head>
 <body>
-<center>	
-	<div class="sdwDiv">
-		<h1>
-			Mr. Gunjan Mohapatra
-		</h1>
-		<h5>
-			Toronto, Ontario, Canada<br>
-		</h5>
-
-	</div>
-	
+<center>		
 	<div class="sdwDiv">
 		<h1><a href="/TimeFinder" target="_blank">What time will it be?</h1></a>
 		<h5>Angular v.9</h5>
@@ -79,7 +69,10 @@ h5
 	<div class="sdwDiv">
 		<a href="Calendar.html" target="_blank"><h1>Annual Calendar</h1></a>	
 	</div>
+	<br>
+	<br>
 	<h5>&copy; 2019 Mr. Gunjan Mohapatra</h5>
+	<h5>Toronto, Ontario, Canada<br></h5>
 	<h5>ContactGunjanMohapatra@gmail.com</h5>
 	
 </center>		
