--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@ h5
 		<h5>Angular v.9</h5>
 	</div>
 	<div class="sdwDiv">
+		<h1><a href="VirtualKeyboard.html" target="_blank">Virtual Keyboard</h1></a>	
+	</div>
+	<div class="sdwDiv">
 		<h1><a href="/gmgrid" target="_blank">JSON Grid Component.</h1></a><h5>To view JSON Data in grid. It has some filter options. Angular v.7</h5>	
 	</div>	
 	<div class="sdwDiv">
