--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@ h5
 </style>
 </head>
 <body>
-<center>		
+<center>
+	<div class="sdwDiv">
+		<h1><a href="clock.html" target="_blank">Clock and Calendar</h1></a>
+	</div>
 	<div class="sdwDiv">
 		<h1><a href="/TimeFinder" target="_blank">What time will it be?</h1></a>
 		<h5>Angular v.9</h5>
