--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ h5
 <center>
 	
 	<div class="sdwDiv">
-		<h1><a href="/calendar" target="_blank">Celendar and Metting</h1></a>
+		<h1><a href="/calendar" target="_blank">Celendar and Meeting</h1></a>
 		<h5>A C# Blazor WebAssembly Application</h5>
 	</div>
 	
@@ -85,7 +85,7 @@ h5
 	<br>
 	<h5>&copy; 2019 Mr. Gunjan Mohapatra</h5>
 	<h5>Toronto, Ontario, Canada<br></h5>
-	<h5>ContactGunjanMohapatra@gmail.com</h5>
+	
 	
 </center>		
 </body>
