--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@ h5
 		<h1><a href="/calendar" target="_blank">Celendar and Meeting</h1></a>
 		<h5>A C# Blazor WebAssembly Application</h5>
 	</div>
+	<div class="sdwDiv">
+		<h1><a href="/gmwhiteboard" target="_blank">White Board</h1></a>
+		<h5>A C# Blazor WebAssembly Application</h5>
+	</div>
 	
 	<div class="sdwDiv">
 		<h1><a href="clock.html" target="_blank">Clock and Calendar</h1></a>
