--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@ h5
 		<h1><a href="/gmwhiteboard" target="_blank">White Board</h1></a>
 		<h5>A C# Blazor WebAssembly Application</h5>
 	</div>
+	
+	<div class="sdwDiv">
+		<h1><a href="/piechart" target="_blank">Pie Chart creator</h1></a>
+		<h5>A C# Blazor WebAssembly Application</h5>
+	</div>
+	
 	<div class="sdwDiv">
 		<h1><a href="/gmdashboard" target="_blank">Dashboard Meters and Gauges</h1></a>
 		<h5>A C# Blazor WebAssembly Application</h5>
@@ -90,7 +96,7 @@ h5
 	
 	<br>
 	<br>
-	<h5>&copy; 2019 Mr. Gunjan Mohapatra</h5>
+	<h5>&copy; 2020 Mr. Gunjan Mohapatra</h5>
 	<h5>Toronto, Ontario, Canada<br></h5>
 	
 	
