--- a/index.html
+++ b/index.html
@@ -65,10 +65,6 @@ h5
 		<h5>A C# Blazor WebAssembly Application</h5>
 	</div>
 	
-	
-	<div class="sdwDiv">
-		<h1><a href="clock.html" target="_blank">Clock and Calendar</h1></a>
-	</div>
 	<div class="sdwDiv">
 		<h1><a href="/TimeFinder" target="_blank">What time will it be?</h1></a>
 		<h5>Angular v.9</h5>
@@ -81,17 +77,26 @@ h5
 		<h1><a href="/DataToCodeAssistant" target="_blank">Data to Code Assistant.</h1></a>	
 		<h5>Angular v.9</h5>
 	</div>
-	<div class="sdwDiv">
-		<h1><a href="VirtualKeyboard.html" target="_blank">Virtual Keyboard</h1></a>	
-	</div>
+	
 	<div class="sdwDiv">
 		<h1><a href="/gmgrid" target="_blank">JSON Grid Component.</h1></a><h5>To view JSON Data in grid. It has some filter options. Angular v.7</h5>	
 	</div>	
 	<div class="sdwDiv">
-		<h1><a href="HTMLAssistant.html" target="_blank">HTML Assistant</h1></a><h5>Very handy for quick html code</h5>	
+		<h1><a href="VirtualKeyboard.html" target="_blank">Virtual Keyboard</h1></a>	
+	</div>
+	
+	<div class="sdwDiv">
+		<h1><a href="clock.html" target="_blank">Clock and Calendar</h1></a>
+		<h5>HTML, CSS and Javascript</h5>
+	</div>
+	
+	<div class="sdwDiv">
+		<h1><a href="HTMLAssistant.html" target="_blank">HTML Assistant</h1></a><h5>Very handy for quick html code</h5>
+		<h5>HTML, CSS and Javascript</h5>
 	</div>	
 	<div class="sdwDiv">
-		<a href="TimeSheetInvoice.html" target="_blank"><h1>A Timesheet and Invoice application</h1></a>	
+		<a href="TimeSheetInvoice.html" target="_blank"><h1>A Timesheet and Invoice application</h1></a>
+		<h5>HTML, CSS and Javascript</h5>
 	</div>
 	
 	<br>
