--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	text-align:center;
 	width:50vw;
 	margin-bottom:20px;
+	background:white;
 }
 
 .sdwDivSub
@@ -35,6 +36,7 @@
 	text-align:left;
 	width:100%;
 	margin:10px;
+	
 }
 body
 {
@@ -67,6 +69,10 @@ a{
 				<h3><li><a href="/gmwhiteboard" target="_blank">White Board</li></h3></a>
 			</div>
 	
+			<div class="sdwDivSub">
+				<h3><li><a href="/gmbarchart" target="_blank">Bar Chart creator</li></h3></a>
+		
+			</div>
 			<div class="sdwDivSub">
 				<h3><li><a href="/piechart" target="_blank">Pie Chart creator</li></h3></a>
 		
