--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@ a{
 			</div>
 	
 			<div class="sdwDivSub">
+				<h3><li><a href="/GMTreeview" target="_blank">A Treeview component with search feature (CSV driven)</li></h3></a>
+			</div>
+			<div class="sdwDivSub">
 				<h3><li><a href="/gmbarchart" target="_blank">Bar Chart creator</li></h3></a>
 		
 			</div>
